--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,18 @@
     <body>
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">slider1</div>
-                <div class="swiper-slide">slider2</div>
-                <div class="swiper-slide">slider3</div>
+                <div class="page1 swiper-slide">
+                    <div class="background"></div>
+                    <div class="text1"></div>
+                </div>
+                <div class="page2 swiper-slide">
+                    <div class="background">
+                    </div>
+                </div>
+                <div class="page3 swiper-slide">
+                    <div class="background">
+                    </div>
+                </div>
             </div>
         </div>
     </body>
