--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>lululemon</title>
+        <meta charset="utf8"/>
         <link href="/static/css/index.css" rel="stylesheet" type="text/css"/>
         <script language="javascript" src="/static/js/index.js"></script>
         <meta name="viewport" content="width=device-width,user-scalable=no"/>
@@ -21,7 +22,28 @@
             <div class="swiper-wrapper">
                 <div class="page1 swiper-slide">
                     <div class="background"></div>
-                    <div class="text1"></div>
+                    <div class="text1">
+                        <div class="text-details">年末将至</div>
+                        <div class="text-details">拂去满身疲惫 卸下心事满怀</div>
+                        <div class="text-details">送自己一份独特礼物</div>
+                        <div class="text-details">与自己对话和解</div>
+                    </div>
+                    <div class="page1-logo">
+                        <div class="page1-logo-bg"></div>
+                        <div class="logo"></div>
+                        <div class="logo-text">携手</div>
+                    </div>
+                    <div class="logo-text-desc">lululemon</div>
+                    <div class="join-button">·加入【xxx】活动·</div>
+                    <div class="page1-text-bottom">
+                        <div class="page1-text-bottom-text">唤醒沉睡自我</div>
+                        <div class="page1-text-bottom-text">感受崭新变化</div>
+                        <div class="page1-text-bottom-text">接近更完美生活</div>
+                    </div>
+                    <div class="page1-button-area">
+                        <div class="active-button">邂逅经典塑形</div>
+                        <div class="active-button">体验奇迹裸感</div>
+                    </div>
                 </div>
                 <div class="page2 swiper-slide">
                     <div class="background">
