--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <title>lululemon</title>
         <meta charset="utf8"/>
         <link href="/static/css/index.css" rel="stylesheet" type="text/css"/>
+        <script language="javascript" src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
         <script language="javascript" src="/static/js/index.js"></script>
         <meta name="viewport" content="width=device-width,user-scalable=no"/>
         <script>
@@ -18,36 +19,57 @@
         </script>
     </head>
     <body>
-        <div class="swiper-container">
+        <div class="welcome">
+            <div class="background"></div>
+            <div class="text1">
+                <div class="text-details">年末将至</div>
+                <div class="text-details">拂去满身疲惫 卸下心事满怀</div>
+                <div class="text-details">送自己一份独特礼物</div>
+                <div class="text-details">与自己对话和解</div>
+            </div>
+            <div class="page1-logo">
+                <div class="page1-logo-bg"></div>
+                <div class="logo"></div>
+                <div class="logo-text">携手</div>
+            </div>
+            <div class="logo-text-desc">lululemon</div>
+            <div class="join-button">·加入【xxx】活动·</div>
+            <div class="page1-text-bottom">
+                <div class="page1-text-bottom-text">唤醒沉睡自我</div>
+                <div class="page1-text-bottom-text">感受崭新变化</div>
+                <div class="page1-text-bottom-text">接近更完美生活</div>
+            </div>
+            <div class="page1-button-area">
+                <div class="active-button button1">邂逅经典塑形</div>
+                <div class="active-button button2">体验奇迹裸感</div>
+            </div>
+        </div>
+        <div class="swiper-container swiper1">
             <div class="swiper-wrapper">
-                <div class="page1 swiper-slide">
-                    <div class="background"></div>
-                    <div class="text1">
-                        <div class="text-details">年末将至</div>
-                        <div class="text-details">拂去满身疲惫 卸下心事满怀</div>
-                        <div class="text-details">送自己一份独特礼物</div>
-                        <div class="text-details">与自己对话和解</div>
-                    </div>
-                    <div class="page1-logo">
-                        <div class="page1-logo-bg"></div>
-                        <div class="logo"></div>
-                        <div class="logo-text">携手</div>
-                    </div>
-                    <div class="logo-text-desc">lululemon</div>
-                    <div class="join-button">·加入【xxx】活动·</div>
-                    <div class="page1-text-bottom">
-                        <div class="page1-text-bottom-text">唤醒沉睡自我</div>
-                        <div class="page1-text-bottom-text">感受崭新变化</div>
-                        <div class="page1-text-bottom-text">接近更完美生活</div>
-                    </div>
-                    <div class="page1-button-area">
-                        <div class="active-button">邂逅经典塑形</div>
-                        <div class="active-button">体验奇迹裸感</div>
-                    </div>
-                </div>
                 <div class="page2 swiper-slide">
-                    <div class="background">
+                    <div class="background"></div>
+                    <div class="page2-interactive1">
+                        <div class="page2-text-top">
+                            <div class="page2-text-title">奇迹裸感</div>
+                            <div class="page2-text-desc">有这么一种体感，</div>
+                            <div class="page2-text-desc">会让你想要永远活在裤子里。</div>
+                            <div class="page2-text-desc">近乎赤裸，</div>
+                            <div class="page2-text-desc">却依旧提供可靠的支撑覆盖。</div>
+                            <div class="page2-text-desc">无拘无束，自由律动。</div>
+                            <div class="page2-text-desc">亲自体验，方能知晓。</div>
+                        </div>
+                        <div class="page2-figure">
+                            <div class="page2-figure1"></div>
+                            <div class="page2-figure2"></div>
+                        </div>
                     </div>
+                    <div class="page2-logo">
+                        <div class="page2-logo-bg"></div>
+                        <div class="logo"></div>
+                    </div>
+                    <div class="page2-bg"></div>
+                    <div class="page2-people1"></div>
+                    <div class="page2-people2"></div>
                 </div>
                 <div class="page3 swiper-slide">
                     <div class="background">
