--- a/src/index.html
+++ b/src/index.html
@@ -44,38 +44,219 @@
                 <div class="active-button button2">体验奇迹裸感</div>
             </div>
         </div>
-        <div class="swiper-container swiper1">
-            <div class="swiper-wrapper">
-                <div class="page2 swiper-slide">
-                    <div class="background"></div>
-                    <div class="page2-interactive1">
-                        <div class="page2-text-top">
-                            <div class="page2-text-title">奇迹裸感</div>
-                            <div class="page2-text-desc">有这么一种体感，</div>
-                            <div class="page2-text-desc">会让你想要永远活在裤子里。</div>
-                            <div class="page2-text-desc">近乎赤裸，</div>
-                            <div class="page2-text-desc">却依旧提供可靠的支撑覆盖。</div>
-                            <div class="page2-text-desc">无拘无束，自由律动。</div>
-                            <div class="page2-text-desc">亲自体验，方能知晓。</div>
-                        </div>
-                        <div class="page2-figure">
-                            <div class="page2-figure1"></div>
-                            <div class="page2-figure2"></div>
-                        </div>
-                    </div>
-                    <div class="page2-logo">
-                        <div class="page2-logo-bg"></div>
-                        <div class="logo"></div>
-                    </div>
-                    <div class="page2-bg"></div>
-                    <div class="page2-people1"></div>
-                    <div class="page2-people2"></div>
+        <div class="page3">
+            <div class="background"></div>
+            <div class="page3-interactive1">
+                <div class="page3-text-top">
+                    <div class="page3-text-title">经典塑形</div>
+                    <div class="page3-text-desc">十载美腿奇迹之名，</div>
+                    <div class="page3-text-desc">源自对女性腿型的自信精准把控。</div>
+                    <div class="page3-text-desc">结合顶尖机能面料，</div>
+                    <div class="page3-text-desc">释放你对紧身裤的所有灵思妙想搭配，</div>
+                    <div class="page3-text-desc">其乐无穷。</div>
                 </div>
-                <div class="page3 swiper-slide">
-                    <div class="background">
+                <div class="page3-figure">
+                    <div class="page3-figure1"></div>
+                    <div class="page3-figure2"></div>
+                </div>
+            </div>
+            <div class="page3-logo">
+                <div class="page3-logo-bg"></div>
+                <div class="logo"></div>
+            </div>
+            <div class="page3-bg"></div>
+            <div class="page3-people1"></div>
+            <div class="page3-people2"></div>
+            <div class="page3-people3"></div>
+            <div class="page3-people4"></div>
+        </div>
+        <div class="page2">
+            <div class="background"></div>
+            <div class="page2-interactive1">
+                <div class="page2-text-top">
+                    <div class="page2-text-title">奇迹裸感</div>
+                    <div class="page2-text-desc">有这么一种体感，</div>
+                    <div class="page2-text-desc">会让你想要永远活在裤子里。</div>
+                    <div class="page2-text-desc">近乎赤裸，</div>
+                    <div class="page2-text-desc">却依旧提供可靠的支撑覆盖。</div>
+                    <div class="page2-text-desc">无拘无束，自由律动。</div>
+                    <div class="page2-text-desc">亲自体验，方能知晓。</div>
+                </div>
+                <div class="page2-figure">
+                    <div class="page2-figure1"></div>
+                    <div class="page2-figure2"></div>
+                </div>
+            </div>
+            <div class="page2-logo">
+                <div class="page2-logo-bg"></div>
+                <div class="logo"></div>
+            </div>
+            <div class="page2-bg"></div>
+            <div class="page2-people1"></div>
+            <div class="page2-people2"></div>
+        </div>
+
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="page2-popup">
+                        <div class="background"></div>
+                        <div class="page2-interactive1">
+                            <div class="page2-text-top">
+                                <div class="page2-text-title">品牌历史</div>
+                                <div class="page2-text-desc">1998年，lululemon诞生于加拿大温哥华。</div>
+                                <div class="page2-text-desc">你或许很难想象，20年前，是棉质运动裤主宰的世界。但我们发现，涉及到伸展和力量的运动更需要透气轻薄的延展机能面料。</div>
+                                <div class="page2-text-desc">这也是启发我们的灵感来源。从第一条瑜伽裤起步，到如今在全世界拥有上百家门店。</div>
+                                <div class="page2-text-desc">设计初心，始终未变。</div>
+                            </div>
+                        </div>
+                        <div class="page2-logo">
+                            <div class="page2-logo-bg"></div>
+                            <div class="logo"></div>
+                        </div>
+                        <div class="page2-bg"></div>
+                        <div class="page2-people1"></div>
+                        <div class="page2-people2"></div>
+                    </div>
+                    <div class="page3-popup">
+                        <div class="background"></div>
+                        <div class="page3-interactive1">
+                            <div class="page3-text-top">
+                                <div class="page3-text-title">品牌历史</div>
+                                <div class="page3-text-desc">1998年，lululemon诞生于加拿大温哥华。</div>
+                                <div class="page3-text-desc">你或许很难想象，20年前，是棉质运动裤主宰的世界。但我们发现，涉及到伸展和力量的运动更需要透气轻薄的延展机能面料。</div>
+                                <div class="page3-text-desc">这也是启发我们的灵感来源。从第一条瑜伽裤起步，到如今在全世界拥有上百家门店。</div>
+                                <div class="page3-text-desc">设计初心，始终未变。</div>
+                            </div>
+                        </div>
+                        <div class="page3-logo">
+                            <div class="page3-logo-bg"></div>
+                            <div class="logo"></div>
+                        </div>
+                        <div class="page3-bg"></div>
+                        <div class="page3-people1"></div>
+                        <div class="page3-people2"></div>
+                        <div class="page3-people3"></div>
+                        <div class="page3-people4"></div>
+                    </div>
+                </div>
+                <div class="swiper-slide information">
+                    <div class="logo"></div>
+                    <div class="background"></div>
+                    <div class="title">· 解锁灵感-YOGA.HEART.BEATS ·</div>
+                    <div class="desc">
+                        <p>华冬初上，在新年来临之前</p>
+                        <p>加拿大高端运动生活品牌lululemon</p>
+                        <p>邀你一起以热汗与音乐解锁能量与灵感的源泉</p>
+                        <p style="color: #cd1733;">12月22日</p>
+                        <p>期待在
+                            <span style="color: #cd1733;">三里屯CHAO回声剧场</span>
+                            与你相遇
+                        </p>
+                        <div class="desc-wrapper">
+                            <ul>
+                                <li>
+                                    <p>在特邀瑜伽老师Theresa桃子老师的指引下</p>
+                                </li>
+                                <li>
+                                    <p>唤醒你的瑜伽焕新体验</p>
+                                </li>
+                                <li>
+                                    <p>现场还有资深音乐人巴山与黄泳晔</p>
+                                </li>
+                                <li>
+                                    <p>演奏古典吉他与手鼓音乐</p>
+                                </li>
+                                <li>
+                                    <p>让你的热汗之旅更加悠扬有致</p>
+                                </li>
+                                <li>
+                                    <p>课后体验lululemon经典“小黑裤Little Black Pants”</p>
+                                </li>
+                                <li>
+                                    <p>了解传奇小黑裤的面料与设计功能</p>
+                                </li>
+                                <li>
+                                    <p>还有产品惊喜温暖回馈给你</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="arrow-down"></div>
+                </div>
+                <div class="swiper-slide collector">
+                    <div class="logo"></div>
+                    <div class="background"></div>
+                    <div class="input-area">
+                        <div class="input-wrapper">
+                            <div class="label-area">
+                                姓名
+                            </div>
+                            <div class="input-area-input">
+                                <input type="text" id="name" placeholder="请输入您的姓名"/>
+                            </div>
+                        </div>
+                        <div class="input-wrapper">
+                            <div class="label-area">
+                                性别
+                            </div>
+                            <div class="input-area-input">
+                                <div id="sex">
+                                    <span class="selector" id="sexSpan">
+                                        男
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="input-wrapper">
+                            <div class="label-area">
+                                生日
+                            </div>
+                            <div class="input-area-input">
+                                <div id="selectDate">
+                                    <span class="selector" id="year">
+                                    </span>
+                                    <span class="selector" id="month">
+                                    </span>
+                                    <span class="selector" id="date">
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="input-wrapper">
+                            <div class="label-area">
+                                所在城市（省市）
+                            </div>
+                            <div id="province" class="input-area-input">
+                                <div id="show_contact">
+                                    <span class="selector" id="provinceSpan">北京市</span>
+                                    <span class="selector" id="citySpan">北京市</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="input-wrapper">
+                            <div class="label-area">
+                                手机号
+                            </div>
+                            <div class="input-area-input">
+                                <input type="text" id="mobile" placeholder="请输入您的手机号"/>
+                            </div>
+                        </div>
+                        <div class="input-wrapper">
+                            <div class="label-area">
+                                邮箱地址（选填）
+                            </div>
+                            <div class="input-area-input">
+                                <input type="text" id="email" placeholder="请输入您的邮箱地址"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="button-area">
+                        <button class="submit">提交</button>
                     </div>
                 </div>
             </div>
         </div>
+
     </body>
 </html>
