--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
                 <div class="swiper-slide collector">
                     <div class="logo"></div>
                     <div class="background"></div>
-                    <div class="input-area">
+                    <div class="input-area show">
                         <div class="input-wrapper">
                             <div class="label-area">
                                 姓名
@@ -251,8 +251,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="button-area">
+                    <div class="submit-button-area show button-area">
                         <button class="submit">提交</button>
+                    </div>
+                    <div class="thanks">
+                        <div class="thanks-message">
+                            <div class="thanks-message-line">感谢您的参与，</div>
+                            <div class="thanks-message-line">我们已经收到了您的报名申请，</div>
+                            <div class="thanks-message-line">结果将随后以手机短信方式通知</div>
+                        </div>
+                        <div class="thanks-button-area">
+                            <button class="focus-button">关注lululemon</button>
+                        </div>
                     </div>
                 </div>
             </div>
