--- a/src/index.html
+++ b/src/index.html
@@ -251,6 +251,7 @@
                             </div>
                         </div>
                     </div>
+                    <div id="error-message"></div>
                     <div class="submit-button-area show button-area">
                         <button class="submit">提交</button>
                     </div>
